@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>HotelReservationSystem</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+  </properties>
   <dependencies>
     <!-- Dependencia de PostgreSQL -->
     <dependency>
@@ -42,6 +46,26 @@
         <artifactId>surefire-junit-platform</artifactId>
         <version>2.22.2</version>
     </dependency>
+
+     <!-- Dependencia de Mockito -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.5.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>5.5.0</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>5.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -63,4 +87,5 @@
         </resource>
     </resources>
   </build>
+  
 </project>
